# fp-video-calls

./: .firebaserc  .gitignore  README.md  firestore.rules  storage.rules
.github/workflows/: azure-static-web-apps-thankful-moss-0611ddf0f.yml
android/: BUILD_INSTRUCTIONS.md  README.md  build.gradle  local.properties.example  settings.gradle
android/app/: build.gradle  proguard-rules.pro
docs/: architecture.md  azure-deploy-complete.md  azure-deploy.md  azure-swa-env-vars-not-working.md  debugging-swa-env-vars.md  deployment-automation.md  github-secrets-vs-environments.md  mobile-app-features.md  staticwebapp-config-solution.md  video-quality.md  webrtc-turn-explanation.md
mobile/: .gitignore  App.tsx  BOOTSTRAP.md  google-services.json.example  index.js  metro.config.js  package-lock.json  package.json
mobile-kotlin/: settings.gradle.kts
mobile-kotlin/app/: build.gradle.kts  (+1 more)
remote-control/: Cargo.toml  build-release.ps1
remote-control/src/: app.rs  i18n.rs  main.rs  protocol.rs
remote-control/src/capture/: mod.rs
remote-control/src/codec/: mod.rs
remote-control/src/input/: mod.rs
remote-control/src/net/: mod.rs  peer.rs  signaling.rs
remote-control/src/ui/: client_view.rs  host_view.rs  mod.rs
remote-control/wix/: main.wxs
server/: app-config.js  auth-middleware.js  blob-storage.js  chat-db.js  chat-routes.js  image-processor.js  index.js  link-preview.js  package-lock.json  package.json  vitest.config.js
turn/: README.md
web/: index.html  package-lock.json  package.json  staticwebapp.config.json  test.html  vite.config.ts
(+192 files in other folders)
